# live_template_build

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.agents/external-docs/: ai-coding-project-setup-guide.md
.claude/commands/: check-ignore-comments.md  commit.md  create-prompt.md
alembic/: env.py
alembic/versions/: e002ba5d32c0_initial.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  health.py  logging.py  middleware.py
app/core/tests/: test_config.py  test_database.py  test_exceptions.py  test_health.py  test_logging.py  test_middleware.py
app/tests/: conftest.py  test_database_integration.py  test_main.py
tests/: __init__.py  test_main.py
