[project]
name = "live-template-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
# Set line length to 88 (Black-compatible)
line-length = 88
indent-width = 4
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable a comprehensive set of rules for better code quality
# E/W: pycodestyle errors and warnings
# F: Pyflakes
# I: isort (import sorting)
# N: pep8-naming
# UP: pyupgrade (modernize Python code)
# B: flake8-bugbear (find likely bugs)
# C4: flake8-comprehensions (better list/dict comprehensions)
# SIM: flake8-simplify (simplify code)
# RUF: Ruff-specific rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Allow autofix for all enabled rules (optimized for AI self-correction)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed or named specifically
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy|unused)$"

[tool.ruff.format]
# Use double quotes by default (Black-compatible)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable formatting code in docstrings
docstring-code-format = true
docstring-code-line-length = 72
