[project]
name = "vsa-fastapi-project"
version = "0.1.0"
description = "FastAPI + PostgreSQL starter with vertical slice architecture, optimized for AI coding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
# Set line length to 88 (Black-compatible)
line-length = 88
indent-width = 4
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable a comprehensive set of rules for better code quality
# E/W: pycodestyle errors and warnings
# F: Pyflakes
# I: isort (import sorting)
# N: pep8-naming
# UP: pyupgrade (modernize Python code)
# B: flake8-bugbear (find likely bugs)
# C4: flake8-comprehensions (better list/dict comprehensions)
# SIM: flake8-simplify (simplify code)
# RUF: Ruff-specific rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Allow autofix for all enabled rules (optimized for AI self-correction)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed or named specifically
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy|unused)$"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes by default (Black-compatible)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable formatting code in docstrings
docstring-code-format = true
docstring-code-line-length = 72

[tool.mypy]
# Python version should match project requirements
python_version = "3.13"

# Enable strict mode - comprehensive type checking for AI-friendly code
strict = true

# Additional strict settings for AI coding
warn_return_any = true          # Warn if return type is Any
warn_unused_configs = true      # Warn about unused config options
warn_redundant_casts = true     # Warn about unnecessary casts
warn_unused_ignores = true      # Warn about unused type: ignore comments
warn_no_return = true            # Warn about missing return statements
warn_unreachable = true          # Warn about unreachable code

# Helpful for catching errors
no_implicit_reexport = true      # Require explicit __all__ or import as
strict_equality = true           # Prohibit equality checks between incompatible types

# Display settings for better AI understanding
show_error_codes = true          # Show error codes (e.g., [arg-type])
show_column_numbers = true       # Show column numbers in errors
pretty = true                    # Use prettier error messages
color_output = false             # Disable color for better parsing
error_summary = true             # Show error summary at the end

# Allow incremental checking
incremental = true
cache_dir = ".mypy_cache"

# Disable strict type checking for test files
[[tool.mypy.overrides]]
module = ["*.tests.*", "app.core.tests.*", "app.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pyright]
# Python version and platform settings
pythonVersion = "3.13"
pythonPlatform = "Linux"

# Use strict type checking mode - most comprehensive rule set
typeCheckingMode = "strict"

# Include and exclude paths
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "**/tests/**",
    "**/test_*.py",
]

# Strict type evaluation settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true

# Report settings - enable comprehensive checks for AI coding
reportGeneralTypeIssues = "error"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportImportCycles = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportMissingSuperCall = "warning"
reportUninitializedInstanceVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "error"
reportImplicitStringConcatenation = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "warning"
reportUnsupportedDunderAll = "error"
reportUnusedCallResult = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMatchNotExhaustive = "warning"

[tool.pytest.ini_options]
# Pytest configuration optimized for async testing and AI coding
minversion = "9.0"
testpaths = ["app", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# pytest-asyncio configuration
# IMPORTANT: asyncio_mode = "auto" creates a new event loop per test (proper isolation)
# This is why integration tests MUST use fixtures (test_db_engine, test_db_session)
# instead of importing the module-level engine from database.py
asyncio_mode = "auto"  # Automatically handle async tests - creates fresh loop per test
asyncio_default_fixture_loop_scope = "function"  # Function-scoped event loops for isolation

# Output and reporting options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Strict marker usage
    "--strict-config",       # Strict configuration
    "--tb=short",           # Shorter traceback format
    "--cov=.",              # Coverage for current directory
    "--cov-report=term-missing",  # Show missing lines in coverage report
    "--cov-report=html",    # Generate HTML coverage report
    "--cov-fail-under=80",  # Require 80% coverage minimum
]

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real database (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["."]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "main.py",  # Old example file, not part of FastAPI app
]

[tool.coverage.report]
# Coverage reporting configuration
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
